--- a/SunriseApp/Base.lproj/Main.storyboard
+++ b/SunriseApp/Base.lproj/Main.storyboard
@@ -15,22 +15,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Input City Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nBX-oZ-Dj8">
-                                <rect key="frame" x="20" y="137" width="374" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Input City Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nBX-oZ-Dj8">
+                                <rect key="frame" x="0.0" y="65" width="414" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="日の出時刻：" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wag-cX-Ulo">
-                                <rect key="frame" x="20" y="248" width="374" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="日の出時刻：" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wag-cX-Ulo">
+                                <rect key="frame" x="0.0" y="199" width="414" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dnk-pV-9jN">
-                                <rect key="frame" x="124" y="428" width="167" height="40"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dnk-pV-9jN">
+                                <rect key="frame" x="123.5" y="432.5" width="167" height="31"/>
                                 <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="日の出時刻を調べる！"/>
@@ -41,6 +38,16 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.45085787770000002" green="0.98829740290000001" blue="0.83763033149999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Wag-cX-Ulo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="4tw-NB-6qM"/>
+                            <constraint firstItem="nBX-oZ-Dj8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="KNh-Ct-FOA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nBX-oZ-Dj8" secondAttribute="trailing" id="hRF-aE-TQR"/>
+                            <constraint firstItem="dnk-pV-9jN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="iTe-Vo-L7Y"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Wag-cX-Ulo" secondAttribute="trailing" id="l13-sc-LT7"/>
+                            <constraint firstItem="nBX-oZ-Dj8" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="21" id="ndd-Rk-Nb2"/>
+                            <constraint firstItem="dnk-pV-9jN" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="yVQ-Au-hfI"/>
+                            <constraint firstItem="Wag-cX-Ulo" firstAttribute="top" secondItem="nBX-oZ-Dj8" secondAttribute="bottom" constant="100" id="yhs-BA-PZr"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="cityNameInput" destination="nBX-oZ-Dj8" id="A9q-cc-Qff"/>
